--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <p id="myHeading">Hello, DOM!</p>
 <button onclick="changeText()">Change Text</button>
 <h1>Hello </h1>
+<p>This is a new feature</p>
